--- a/src/components/style.css
+++ b/src/components/style.css
@@ -21,3 +21,41 @@
     --bs-accordion-active-color: var(--bs-primary-text-emphasis);
     --bs-accordion-active-bg: var(--bs-primary-bg-subtle);
 }
+
+
+.sidebar-inner .accordion-button::after {
+    display: none !important;
+}
+
+.accordion-button {
+    color: white !important;
+}
+
+.accordion-button:hover {
+    background-color: #2e3650 !important;
+}
+
+.sidebar-chevron{
+    width: 100%;
+    display: flex !important;
+    justify-content: flex-end !important;
+}
+
+.btn1{
+    margin-bottom: 1vmax;
+    border-radius: 25px;
+    font-weight: 600;
+    color: white;
+    outline: none;
+    border: none;
+    border: 2px solid rgb(59, 156, 205);
+    padding: 8px 8px !important;
+    width: 200px;
+    background-color: rgb(59, 156, 205);
+}
+
+.btn1:hover{
+transition: cubic-bezier(0.165, 0.84, 0.44, 1);
+    border: 2px solid rgb(59, 156, 205);
+    background-color: transparent;
+}
